assets/css/style.css
/* ... */
@keyframes fadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

body {
    font-family: halyard-display, sans-serif;
    font-weight: 400;
    font-style: normal;
    overflow-x: hidden;
    background-color: var(--bg-color);
}

a {
    cursor: pointer;
    border-bottom: 1px solid var(--txt-color);
    -webkit-transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
    -o-transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
    transition: all .5s cubic-bezier(0.075, 0.82, 0.165, 1);
}

a:hover {
    color: var(--ecru);
    border-bottom: 1px solid var(--orange);
}

nav a,
footer a,
.project-title--lv,
.page-gallery a,
.close-btn {
    border-bottom: none;
}

nav a:hover,
footer a:hover,
.project-title--lv:hover,
.page-gallery a:hover,
.close-btn:hover {
    color: inherit;
    border-bottom: none;
}

h2 {
    font-size: var(--large-txt);
    font-weight: 200;
    line-height: .8;
    text-indent: -2px;
    margin-bottom: .5rem;
    text-transform: uppercase;
}

li {
    color: var(--txt-color);
}

body.home {
    overflow: hidden;
}

.cursor {
    position: absolute;
    top: 0;
    left: 0;
    -webkit-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: var(--cursor-size);
    height: var(--cursor-size);
    z-index: 4;
    pointer-events: none;
    background-repeat: no-repeat;
    background-size: contain;
}

.project.animation {
    -webkit-transition: -webkit-transform 0s;
    transition: -webkit-transform 0s;
    -o-transition: transform 0s;
    transition: transform 0s;
    transition: transform 0s, -webkit-transform 0s;
    top: 50% !important;
    left: 50% !important;
    -webkit-transform: scale(0);
    -ms-transform: scale(0);
    transform: scale(0);
    opacity: 0;
}

.animation-cover {
    width: 100vw;
    height: 100vh;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 9;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    pointer-events: none;
    background-color: var(--txt-color);
    -webkit-transition: background-color .5s ease-in, opacity .5s ease;
    -o-transition: background-color .5s ease-in, opacity .5s ease;
    transition: background-color .5s ease-in, opacity .5s ease;
}

.logo-init {
    width: calc(var(--large-txt)*2);
    -webkit-animation: fadeIn .8s ease-in-out 1 forwards;
    animation: fadeIn .8s ease-in-out 1 forwards;
    -webkit-transition: width 4s linear, -webkit-filter .5s 1s ease;
    transition: width 4s linear, -webkit-filter .5s 1s ease;
    -o-transition: width 4s linear, filter .5s 1s ease;
    transition: width 4s linear, filter .5s 1s ease;
    transition: width 4s linear, filter .5s 1s ease, -webkit-filter .5s 1s ease;
}

.logo-init.change-width {
    width: 100%;
    -webkit-filter: opacity(0);
    filter: opacity(0);
}

.fill-white {
    fill: var(--bg-color);
}

.fill-black {
    fill: var(--txt-color);
}

.logo-init svg {
    display: block;
    margin-bottom: 1rem;
}

.logo-name {
    position: relative;
    fill: var(--bg-color);
}

.logo-name g {
    -webkit-transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    transition: -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    -o-transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    transition: transform 1s cubic-bezier(0.075, 0.82, 0.165, 1), -webkit-transform 1s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.logo-name g:first-of-type {
    -webkit-transform: translateX(-100%);
    -ms-transform: translateX(-100%);
    transform: translateX(-100%);
}

.logo-name g:last-of-type {
    -webkit-transform: translateX(100%);
    -ms-transform: translateX(100%);
    transform: translateX(100%);
}

header {
    position: fixed;
    top: var(--general-margin);
    right: var(--general-margin);
    color: var(--ecru);
    font-weight: 500;
    font-size: 1.2rem;
    z-index: 6;
}

nav {
    line-height: 1;
    font-weight: 400;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
    -ms-flex-direction: row;
    flex-direction: row;
    gap: 2rem;
}

nav a:hover,
nav a.current {
    color: var(--orange);
}

nav h1 {
    display: inline;
    color: var(--orange);
}

.overlay {
    width: 100%;
    height: 100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 4;
    background-color: var(--bg-color);
    opacity: 0;
    pointer-events: none;
    -webkit-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    -o-transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
    transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
}

.overlay.over {
    opacity: .95;
    pointer-events: all;
    cursor: none;
}

.close-all {
    display: none;
}

.to-the-page {
    visibility: hidden;
    pointer-events: none;
}

footer {
    position: fixed;
    bottom: var(--general-margin);
    right: var(--general-margin);
    z-index: 3;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: baseline;
    -ms-flex-align: baseline;
    align-items: baseline;
    gap: 2rem;
    font-size: var(--copy-txt);
    font-weight: 400;
    line-height: 1.2;
    color: var(--txt-color);
}

footer p:nth-of-type(1) {
    font-weight: 500;
}

footer p:nth-of-type(2) {
    color: var(--orange);
}

footer a {
    color: var(--ecru);
}

footer a:hover {
    color: var(--orange);
}
/* ... */

